The current version of Ruby Reports is 0.4.99

changes since 0.4.23

changes since 0.4.21

- JH's invoice engine integrated

- Added rope, a tool for building a friendly environment for reports that use
  Ruport.

- Fixed very broken Ruport::Query (DataSet aftermath)
  We need to figure out a way to test this class better.

- Added Data::Table#add_column which is useful for calculated fields. (#19)

- Data::Table.reorder now works properly. 
  (Can use integer indices or attributes)

- Moved Data::Table.to_format to Collection, but be warned that the plugins must
  support the collection you call them on.  (Set is not fully supported yet)

- Renamed Query#to_dataset to Query#to_table

- Array#to_table now supports just passing an array of column_names if you do
  not need other keyword arguments.  This makes the interface support to_ds
  style calls.

changes since 0.4.19
- Added a rake task to run rcov

- Removed DataSet / DataRow.  Farewell good friends

- Added Array#to_table, dropped Array#to_ds

- You can now convert Sets to Tables and vice-versa

- acts_as_reportable converted to use Data::Table

- Data::Record's constructor can now take a hash

- Added initial Data::Set implementation

- Added smart Data::Table.to_format method_missing functionality

changes since 0.4.17

- Made method_missing a lot more friendly all around.

- Made minor interface changes.

- Data::Table and Data::Record now dup correctly

- Fixed some serious issues between Data::Table and TextPlugin

- Report#eval_template now returns an ERb string instead of printing to STDOUT

- Added Data::Table#split which allows basic grouping operations

- Added Report#load_csv convenience method 

- Tightened up Data::Table#<< to ensure column_names match record attributes

- Fixed appending a Record in Data::Table#<<

changes since 0.4.15

- Fixed a packaging bug

changes since 0.4.13

- Began building a new data handling system, which is much faster than